--- a/meilisearch-release-changelog/v1.8.0.md
+++ b/meilisearch-release-changelog/v1.8.0.md
@@ -3,7 +3,7 @@
 <!-- The following line should ONLY be put PRE-release changelogs -->
 ⚠️ Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-Meilisearch v1.8 introduces new changes and optimizations related to the Hybrid search with the addition of new models and embedders like REST embedders and the Ollama model. This version also focuses on stability by adding more security around the search requests.
+Meilisearch v1.8 introduces new changes and optimizations related to the Hybrid search with the addition of new models and embedders like REST embedders and the Ollama model. This version also focuses on stability by adding more security around the search requests. Finally, we introduce the negative operator to exclude specific terms from a search query.
 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
@@ -21,7 +21,7 @@ Full description of hybrid search changes [here](https://www.notion.so/meilisear
 
 Done by @dureuill and @jakobklemm in #4456, #4537, #4509, #4548, #4549.
 
-### Breaking changes of hybrid search usage
+### ⚠️ Breaking changes of hybrid search usage
 
 TBD: still in review?
 
@@ -29,7 +29,7 @@ TBD: still in review?
 * `_semanticScore` is no longer returned in the search response. The `_rankingScore` field has the same value as the `_semanticScore`, and should be used in its place. To get the `_rankingScore` value, add `"showRankingScore": true` to the search query.
 * When adding `"showRankingScoreDetails": true` to a semantic search query, the vector and its `value` are no longer displayed to improve the search speed.
 
-### New embedders: REST embedder and Ollama model
+### New embedders: generic REST embedder and Ollama model
 
 New embedder sources have been added
 - `ollama` source
@@ -43,9 +43,9 @@ Meilisearch now supports any REST embedder. You can set them up with the followi
 "default": {
   "source": "rest", // 👈 Use the REST source
   "url": "http://localhost:12345/api/v1/embed",
-  // ☝️ Mandatory, full URL to the embedding endpoint.
+  // ☝️ Mandatory, full URL to the embedding endpoint
   "apiKey": "187HFLDH97CNHN",
-  // ☝️ optional, same as the OpenAI's API key.
+  // ☝️ optional, will be passed as Bearer in the Authorization header
   "dimensions": 512,
   // ☝️ optional, inferred with a dummy request if missing
   "documentTemplate": "blabla",
@@ -124,9 +124,18 @@ When setting an embedder, you can now set the `distribution` shift.
 
 The “distribution shift” is an affine transformation applied to the `semanticScore` of a vector search result with the aim of making the comparison to the `rankingScore` of a keyword search result more meaningful.
 
+### Other hybrid search improvements
+
+* Hide the API key in settings and task queue (#4533) @dureuill
+* Return the keyword search results even in case of a failure of the embedding (#4548) @dureuill
+
 ## Support negative keyword when searching
 
-TBD
+Search queries can now contain a negative keyword to exclude terms from the search. Use the `-` operator in front of a word or a phrase to make sure no document that contains those words are shown in the results.
+
+- `-escape` returns a placeholder search without any document contains the `escape` word.
+- `-escape room` returns only documents containing the `room` word but not the `escape` one.
+- `-"on demand"` returns a placeholder search but without any document containing the `"on demand"` phrase.
 
 Done by @Kerollmops in #4535.
 
@@ -153,24 +162,35 @@ Done by @irevoire in #4466.
 
 ### Limit concurrent search requests
 
-TBD
+Meilisearch now limits the number of search requests waiting to be processed to avoid consuming an unbounded amount of RAM and crashing. So a queue of search requests waiting to be processed has been introduced.
 
-👉 This change does NOT impact the search performance, but only the number of enqueued search requests to prevent any security issues.
+👉 This change does NOT impact the search performance, but only the number of enqueued search requests to prevent from any security issues.
+
+The default number of requests in the queue is 1000.
+
+To change this limit, use the experimental CLI flag:
+
+```bash
+./meilisearch --experimental-search-queue-size 100
+```
+
+🗣️ This is an experimental flag and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/729).
 
 Done by @irevoire in #4536
 
 ## Other improvements
 
+* Reduce indexing speed when updating settings (#4504) @ManyTheFish -> TBD: still in review or merged?
 * The `sortFacetValuesBy` setting now impacts the `/facet-search` route (#4476) @Kerollmops
 * Related to [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): add `status` code label to the HTTP request counter (#4373) @rohankmr414
-* Related to [Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677): hide the API key in settings and task queue (#4533) @dureuill
 * Tokenizer improvements by bumping charabia to 0.8.8 (#4511) @6543
   * Support markdown formatted code blocks
   * Improve Korean segmentation to correctly use the context ID registered in the dictionary
 
 # Fixes 🐞
 
-* Related to [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): fix the HTTP request duration histogram bucket boundaries to follow the opentelemetry spec (#4530) @rohankmr414
+* Related to [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): fix the HTTP request duration histogram bucket boundaries to follow the OpenTelemetry spec (#4530) @rohankmr414
+* Related to [Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677): fix an [error on Windows](https://github.com/meilisearch/meilisearch/issues/4399) when generating embeddings (#4549) @dureuill
 
 # Misc
 
@@ -186,7 +206,7 @@ Done by @irevoire in #4536
 * Documentation
   * Fix milli link in contributing doc (#4499) @mohsen-alizadeh
   * Fix some typos in comments (#4546) @redistay
-  * Remove repetitive word in Benchmark docs (#4526) @availhang
+  * Remove repetitive words in Benchmark docs (#4526) @availhang
   * Remove repetitive words in code-base comments (#4491) @shuangcui
   * Update sprint_issue.md (#4516) @curquiza
   * Add documentation for benchmarks (#4477) @dureuill
@@ -199,10 +219,3 @@ Done by @irevoire in #4536
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @availhang, @hack3ric, @jakobklemm, @mohsen-alizadeh, @redistay, @rohankmr414, @shuangcui, @Toromyx, @6543.
 - [Charabia](https://github.com/meilisearch/charabia): @mosuka, @6543
-
-
-TBD - PR in progress:
-* Support Negative Keywords (#4535) @Kerollmops
-* v1.8 hybrid search changes (#4548) @dureuill
-* Hugging Face embedder improvements (#4549) @dureuill
-* Avoid clearing db in transform (#4504) @ManyTheFish
