--- a/meilisearch-release-changelog/v1.8.0.md
+++ b/meilisearch-release-changelog/v1.8.0.md
@@ -15,7 +15,7 @@ Some SDKs might not include all new features—consult the project repository fo
 
 ## Hybrid search improvements
 
-Full description of hybrid search changes [here](https://www.notion.so/meilisearch/v1-8-AI-search-API-usage-135552d6e85a4a52bc7109be82aeca42#d9d12899e15b4f00a19b247cf6f4bdcc).
+Full description of hybrid search changes [here](https://meilisearch.notion.site/v1-8-AI-search-API-usage-135552d6e85a4a52bc7109be82aeca42).
 
 🗣️ This is an experimental feature and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/677).
 
