Apply suggestions from code review
Co-authored-by: Louis Dureuil <louis@meilisearch.com>

--- a/meilisearch-release-changelog/v1.8.0.md
+++ b/meilisearch-release-changelog/v1.8.0.md
@@ -25,9 +25,9 @@ Done by @dureuill and @jakobklemm in #4456, #4537, #4509, #4548, #4549.
 
 TBD: still in review?
 
-* To ease the search answer speed, Meilisearch no longer returns the query vector in the search response. The `vector` field will not be displayed.
+* To ease the search answer speed and bandwidth, Meilisearch no longer returns the query vector in the search response. The `vector` field will not be displayed.
 * `_semanticScore` is no longer returned in the search response. The `_rankingScore` field has the same value as the `_semanticScore`, and should be used in its place. To get the `_rankingScore` value, add `"showRankingScore": true` to the search query.
-* When adding `"showRankingScoreDetails": true` to a semantic search query, the vector and its `value` are no longer displayed to improve the search speed.
+* When adding `"showRankingScoreDetails": true` to a semantic search query, the vector and its `value` are no longer displayed to improve the search speed and bandwidth use.
 
 ### New embedders: generic REST embedder and Ollama model
 
@@ -122,12 +122,13 @@ When setting an embedder, you can now set the `distribution` shift.
 }
 ```
 
-The “distribution shift” is an affine transformation applied to the `semanticScore` of a vector search result with the aim of making the comparison to the `rankingScore` of a keyword search result more meaningful.
+The “distribution shift” is an affine transformation applied to the `_rankingScore` of a **semantic** search result with the aim of making the comparison to the `_rankingScore` of a **keyword** search result more meaningful.
 
 ### Other hybrid search improvements
 
 * Hide the API key in settings and task queue (#4533) @dureuill
 * Return the keyword search results even in case of a failure of the embedding (#4548) @dureuill
+* TBD: in review? For hybrid or semantic search requests, add a `semanticHitCount` field at the top of the search response indicating the number of hits originating from the semantic search (#4548) @dureuill
 
 ## Support negative keyword when searching
 
@@ -180,7 +181,7 @@ Done by @irevoire in #4536
 
 ## Other improvements
 
-* Reduce indexing speed when updating settings (#4504) @ManyTheFish -> TBD: still in review or merged?
+* Increase indexing speed when updating settings (#4504) @ManyTheFish -> TBD: still in review or merged?
 * The `sortFacetValuesBy` setting now impacts the `/facet-search` route (#4476) @Kerollmops
 * Related to [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): add `status` code label to the HTTP request counter (#4373) @rohankmr414
 * Tokenizer improvements by bumping charabia to 0.8.8 (#4511) @6543
