Apply suggestions from code review
Co-authored-by: Louis Dureuil <louis@meilisearch.com>

--- a/meilisearch-release-changelog/v1.8.0.md
+++ b/meilisearch-release-changelog/v1.8.0.md
@@ -23,7 +23,6 @@ Done by @dureuill and @jakobklemm in #4456, #4537, #4509, #4548, #4549.
 
 ### ⚠️ Breaking changes of hybrid search usage
 
-TBD: still in review?
 
 * To ease the search answer speed and bandwidth, Meilisearch no longer returns the query vector in the search response. The `vector` field will not be displayed.
 * `_semanticScore` is no longer returned in the search response. The `_rankingScore` field has the same value as the `_semanticScore`, and should be used in its place. To get the `_rankingScore` value, add `"showRankingScore": true` to the search query.
@@ -128,7 +127,7 @@ The “distribution shift” is an affine transformation applied to the `_rankin
 
 * Hide the API key in settings and task queue (#4533) @dureuill
 * Return the keyword search results even in case of a failure of the embedding (#4548) @dureuill
-* TBD: in review? For hybrid or semantic search requests, add a `semanticHitCount` field at the top of the search response indicating the number of hits originating from the semantic search (#4548) @dureuill
+* For hybrid or semantic search requests, add a `semanticHitCount` field at the top of the search response indicating the number of hits originating from the semantic search (#4548) @dureuill
 
 ## Support negative keyword when searching
 
