Apply suggestions from code review

--- a/meilisearch-release-changelog/v1.8.0.md
+++ b/meilisearch-release-changelog/v1.8.0.md
@@ -144,18 +144,18 @@ Done by @Kerollmops in #4535.
 
 To avoid any crash and performance issues, Meilisearch now stops search requests lasting more than 150ms.
 
-If you want to customize this value, you can update the `search_cutoff` settings (value in ms):
+If you want to customize this value, you can update the `searchCutoffMs` settings (value in ms):
 
 ```bash
 curl \
   -X PATCH 'http://localhost:7700/indexes/movies/settings' \
   -H 'Content-Type: application/json' \
   --data-binary '{
-    "search_cutoff": 50
+    "searchCutoffMs": 50
   }'
 ```
 
-The default value of the `search_cutoff` setting is `null` and corresponds to 150ms.
+The default value of the `searchCutoffMs` setting is `null` and corresponds to 150ms.
 
 Done by @irevoire in #4466.
 
