--- a/meilisearch-release-changelog/v1.8.0.md
+++ b/meilisearch-release-changelog/v1.8.0.md
@@ -94,7 +94,7 @@ Here is how to set up the Ollama model:
 
 ```json5
 "default": {
-  "source": "ollama", // 👈 Use the REST source
+  "source": "ollama", // 👈 Use the Ollama source
   "url": "http://localhost:11434/api/embeddings",
   // ☝️ optional, fetched from MEILI_OLLAMA_URL environment variable if missing
   "apiKey": "<foobarbaz>",
