Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.8.0.md
+++ b/meilisearch-release-changelog/v1.8.0.md
@@ -11,9 +11,9 @@ Meilisearch v1.8 introduces new changes and optimizations related to the Hybrid 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
 Some SDKs might not include all new features. Consult the project repository for detailed information. Is a feature you need missing from your chosen SDK? Create an issue letting us know you need it, or, for open-source karma points, open a PR implementing it (we'll love you for that ❤️).
 
-# New features and improvements 🔥
+# New features and updates 🔥
 
-## Hybrid search improvements
+## Hybrid search
 
 Full description of hybrid search changes [here](https://meilisearch.notion.site/v1-8-AI-search-API-usage-135552d6e85a4a52bc7109be82aeca42).
 
@@ -21,98 +21,61 @@ Full description of hybrid search changes [here](https://meilisearch.notion.site
 
 Done by @dureuill and @jakobklemm in #4456, #4537, #4509, #4548, #4549.
 
-### ⚠️ Breaking changes of hybrid search usage
+### ⚠️ Breaking changes: `_semanticScore`
 
-* To ease the search answer speed and bandwidth, Meilisearch no longer returns the query vector in the search response. The `vector` field will not be displayed.
-* `_semanticScore` is no longer returned in the search response. The `_rankingScore` field has the same value as the `_semanticScore`, and should be used in its place. To get the `_rankingScore` value, add `"showRankingScore": true` to the search query.
-* When adding `"showRankingScoreDetails": true` to a semantic search query, the vector and its `value` are no longer displayed to improve the search speed and bandwidth use.
+To increase search response times and reduce bandwidth usage:
 
-### New embedders: generic REST embedder and Ollama model
+* Meilisearch no longer returns the `vector` field will in the search response
+* Meilisearch no longer returns the `_semanticScore` in the search response. Use `_rankingScore` in its place
+* Meilisearch no longer displays the query vector and its value when`"showRankingScoreDetails": true`
 
-New embedder sources have been added
-- `ollama` source
-- `rest` source
+### New embedders: Ollama and generic REST embedder
 
-**REST embedder**
+#### Ollama model
 
-Meilisearch now supports any REST embedder. You can set them up with the following configuration:
+[Ollama](https://ollama.com/) is a framework for building and running language models locally. Configure it by [supplying an embedder object to the `/settings` endpoint](https://www.meilisearch.com/docs/learn/experimental/vector_search#generate-vector-embeddings):
 
 ```json5
 "default": {
-  "source": "rest", // 👈 Use the REST source
-  "url": "http://localhost:12345/api/v1/embed",
-  // ☝️ Mandatory, full URL to the embedding endpoint
-  "apiKey": "187HFLDH97CNHN",
-  // ☝️ optional, will be passed as Bearer in the Authorization header
-  "dimensions": 512,
-  // ☝️ optional, inferred with a dummy request if missing
-  "documentTemplate": "blabla",
-  "inputField": ["data", "text"],
-  // ☝️ inject texts in data.text in the query
-  // Optional, defaults to []
-  "inputType": "text", // text or textArray
-  // ☝️ inject a single text
-  // Optional, defaults to text
-  "query": {
-    // A JSON object describing other fields to send in a query
-    // for example
-    "model": "name-of-your-model",
+  "source": "ollama",
+  "url": "http://localhost:11434/api/embeddings",  // optional, fetched from MEILI_OLLAMA_URL environment variable if missing
+  "apiKey": "<foobarbaz>",  // optional
+  "model": "nomic-embed-text",
+  "documentTemplate": "A document titled '{{doc.title}}' whose description starts with {{doc.overview|truncatewords: 20}}"
+}
+```
+
+#### Generic REST embedder
+
+Meilisearch now also supports any embedder with a RESTful interface. Configure it by [supplying an embedder object to the `/settings` endpoint](https://www.meilisearch.com/docs/learn/experimental/vector_search#generate-vector-embeddings):
+
+```json5
+"default": {
+  "source": "rest",
+  "url": "http://localhost:12345/api/v1/embed", //Mandatory, full URL to the embedding endpoint
+  "apiKey": "187HFLDH97CNHN", // Optional, passed as Bearer in the Authorization header
+  "dimensions": 512, // Optional, inferred with a dummy request if missing
+  "documentTemplate": "A document titled '{{doc.title}}' whose description starts with {{doc.overview|truncatewords: 20}}"
+  "inputField": ["data", "text"], // Optional, defaults to []
+  "inputType": "text", // Optional, either "text" or "textArray", defaults to text
+  "query": { // Optional, defaults to {}
+    "model": "MODEL_NAME",
     "dimensions": 512
   },
-  // ☝️ A JSON object describing other fields to send in a query
-  // Optional, defaults to {}
-  "pathToEmbeddings": ["data"],
-  // ☝️ look at embeddings in "data" in the response
-  // Optional, defaults to []
-  "embeddingObject": ["embedding"]
-  // ☝️ look at the embedding inside of "embedding"
-  // Optional, defaults to []
+  "pathToEmbeddings": ["data"], // Optional, defaults to []
+  "embeddingObject": ["embedding"] // Optional, defaults to []
 }
 ```
 
-Here is an example of setting OpenAI embedder with the `rest` source:
 
-```json5
-{
-  "source": "rest",
-  "apiKey": "<your-openai-api-key>",
-  "dimensions": 1536,
-  "url": "https://api.openai.com/v1/embeddings",
-  "query": {
-    "model": "text-embedding-ada-002"
-  },
-  "inputField": ["input"],
-  "inputType": "textArray",
-  "pathToEmbeddings": ["data"],
-  "embeddingObject": ["embedding"]
-}
-```
+### New embedder setting: `distribution`
 
-**Ollama model**
-
-Here is how to set up the Ollama model:
+Use `distribution` to apply an affine transformation to the `_rankingScore` of **semantic** search results. This can help to compare `_rankingScore`s of semantic and keyword search results and improve result ranking.
 
 ```json5
 "default": {
-  "source": "ollama", // 👈 Use the Ollama source
-  "url": "http://localhost:11434/api/embeddings",
-  // ☝️ optional, fetched from MEILI_OLLAMA_URL environment variable if missing
-  "apiKey": "<foobarbaz>",
-  // ☝️ optional
-  "model": "nomic-embed-text",
-  "documentTemplate": "blabla" // like for openAI and huggingFace sources
-}
-
-```
-
-### Expose the `distribution` shift setting
-
-When setting an embedder, you can now set the `distribution` shift.
-
-```json5
-"default": {
-  "source": "huggingFace", // supported for any source
-  "model": "some/model",
+  "source": "huggingFace",
+  "model": "MODEL_NAME",
   "distribution": {  // describes the natural distribution of results
     "mean": 0.7, // mean value
     "sigma": 0.3 // variance
@@ -120,60 +83,63 @@ When setting an embedder, you can now set the `distribution` shift.
 }
 ```
 
-The “distribution shift” is an affine transformation applied to the `_rankingScore` of a **semantic** search result with the aim of making the comparison to the `_rankingScore` of a **keyword** search result more meaningful.
-
 ### Other hybrid search improvements
 
 * Hide the API key in settings and task queue (#4533) @dureuill
-* Return the keyword search results even in case of a failure of the embedding (#4548) @dureuill
+* Return keyword search results even in case of a failure of the embedding when performing hybrid searches (#4548) @dureuill
 * For hybrid or semantic search requests, add a `semanticHitCount` field at the top of the search response indicating the number of hits originating from the semantic search (#4548) @dureuill
 
-## Support negative keyword when searching
+## New feature: Negative keywords
 
-Search queries can now contain a negative keyword to exclude terms from the search. Use the `-` operator in front of a word or a phrase to make sure no document that contains those words are shown in the results.
+Search queries can now contain a negative keyword to exclude terms from the search. Use the `-` operator in front of a word or a phrase to make sure no document that contains those words are shown in the results:
 
-- `-escape` returns a placeholder search without any document contains the `escape` word.
-- `-escape room` returns only documents containing the `room` word but not the `escape` one.
-- `-"on demand"` returns a placeholder search but without any document containing the `"on demand"` phrase.
+```bash
+curl \
+  -X POST 'http://localhost:7700/indexes/places/search' \
+  -H 'Content-Type: application/json' \
+  --data-binary '{ "q": "-escape room" }'
+```
+
+- `-escape` returns any document that does not contain `escape`
+- `-escape room` returns documents containing `room` but not `escape`
+- `-"on demand"` returns any document that does not contain `"on demand"`
 
 Done by @Kerollmops in #4535.
 
-## Search robustness improvements
+## Search robustness updates
 
-### Add a search cutoff
+### Search cut-off
 
-To avoid any crash and performance issues, Meilisearch now stops search requests lasting more than 150ms.
+To avoid crashes and performance issues, Meilisearch now interrupts search requests that take more than 1500ms to complete.
 
-If you want to customize this value, you can update the `searchCutoffMs` settings (value in ms):
+Use the `/settings` endpoint to customize this value:
 
 ```bash
 curl \
   -X PATCH 'http://localhost:7700/indexes/movies/settings' \
   -H 'Content-Type: application/json' \
   --data-binary '{
-    "searchCutoffMs": 50
+    "searchCutoffMs": 150
   }'
 ```
 
-The default value of the `searchCutoffMs` setting is `null` and corresponds to 150ms.
+The default value of the `searchCutoffMs` setting is `null` and corresponds to a 1500ms timeout.
 
 Done by @irevoire in #4466.
 
-### Limit concurrent search requests
+### Concurrent search request limits
 
-Meilisearch now limits the number of search requests waiting to be processed to avoid consuming an unbounded amount of RAM and crashing. So a queue of search requests waiting to be processed has been introduced.
+This release introduces a limit for concurrent search requests to prevent Meilisearch from consuming an unbounded amount of RAM and crashing.
 
-👉 This change does NOT impact the search performance, but only the number of enqueued search requests to prevent from any security issues.
-
-The default number of requests in the queue is 1000.
-
-To change this limit, use the experimental CLI flag:
+The default number of requests in the queue is 1000. Relaunch your self-hosted instance with `--experimental-search-queue-size` to change this limit:
 
 ```bash
 ./meilisearch --experimental-search-queue-size 100
 ```
 
-🗣️ This is an experimental flag and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/729).
+👉 This limit does NOT impact the search performance. It only affects the number of enqueued search requests to prevent security issues.
+
+🗣️ This is an experimental feature and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/729).
 
 Done by @irevoire in #4536
 
@@ -181,26 +147,26 @@ Done by @irevoire in #4536
 
 * Increase indexing speed when updating settings (#4504) @ManyTheFish -> TBD: still in review or merged?
 * The `sortFacetValuesBy` setting now impacts the `/facet-search` route (#4476) @Kerollmops
-* Related to [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): add `status` code label to the HTTP request counter (#4373) @rohankmr414
+* [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): add `status` code label to the HTTP request counter (#4373) @rohankmr414
 * Tokenizer improvements by bumping charabia to 0.8.8 (#4511) @6543
   * Support markdown formatted code blocks
   * Improve Korean segmentation to correctly use the context ID registered in the dictionary
 
 # Fixes 🐞
 
-* Related to [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): fix the HTTP request duration histogram bucket boundaries to follow the OpenTelemetry spec (#4530) @rohankmr414
-* Related to [Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677): fix an [error on Windows](https://github.com/meilisearch/meilisearch/issues/4399) when generating embeddings (#4549) @dureuill
+* [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): fix the HTTP request duration histogram bucket boundaries to follow the OpenTelemetry spec (#4530) @rohankmr414
+* [Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677): fix an [error on Windows](https://github.com/meilisearch/meilisearch/issues/4399) when generating embeddings (#4549) @dureuill
 
 # Misc
 
-* Dependencies upgrade
+* Dependency updates
   * Bump mio from 0.8.9 to 0.8.11 (#4457)
   * Upgrade rustls to 0.21.10 and ring to 0.17 (#4400) @hack3ric
 * CIs and tests
-  * Add automation to create openAPI issue (#4520) @curquiza
-  * Add tests when the field limit is reached (#4463) @irevoire
+  * Add automation to create openAPI issues (#4520) @curquiza
+  * Add tests to check when the field limit is reached (#4463) @irevoire
   * Allow running benchmarks without sending results to the dashboard (#4475) @dureuill
-  * Create automation when creating Milestone to create update-version issue (#4416) @curquiza
+  * Create automation when creating GitHub milestones to create update-version issue (#4416) @curquiza
   * Fix reason param when benches are triggered from a comment (#4483) @dureuill
 * Documentation
   * Fix milli link in contributing doc (#4499) @mohsen-alizadeh
