Update changelogs following rc1 and rc2

--- a/meilisearch-release-changelog/v1.8.0.md
+++ b/meilisearch-release-changelog/v1.8.0.md
@@ -145,15 +145,20 @@ Done by @irevoire in #4536
 
 ## Other improvements
 
-* Increase indexing speed when updating settings (#4504) @ManyTheFish -> TBD: still in review or merged?
+* Increase indexing speed when updating settings (#4504) @ManyTheFish
+* Update search logs: do not display `hits` in the search output for DEBUG log level (#4580) @irevoire
 * The `sortFacetValuesBy` setting now impacts the `/facet-search` route (#4476) @Kerollmops
 * [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): add `status` code label to the HTTP request counter (#4373) @rohankmr414
 * Tokenizer improvements by bumping charabia to 0.8.8 (#4511) @6543
   * Support markdown formatted code blocks
   * Improve Korean segmentation to correctly use the context ID registered in the dictionary
+  * Add `\t` as recognized separator
+  * Make the pinyin-normalization optional - this can be reactivated by enabling the `chinese-normalization-pinyin` feature
 
 # Fixes 🐞
 
+* Fix crash when putting empty separator (#4574) @ManyTheFish
+* Always show facet numbers in alpha order in the facet distribution (#4581) @Kerollmops
 * [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): fix the HTTP request duration histogram bucket boundaries to follow the OpenTelemetry spec (#4530) @rohankmr414
 * [Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677): fix an [error on Windows](https://github.com/meilisearch/meilisearch/issues/4399) when generating embeddings (#4549) @dureuill
 
@@ -178,8 +183,9 @@ Done by @irevoire in #4536
   * Fix typos (#4542) @brunoocasali
 * Misc
   * Update cargo version (#4474) @curquiza
+  * Remove useless analytics (#4578) @irevoire
   * Fix milli/Cargo.toml for usage as dependency via git (#4547) @Toromyx
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @availhang, @hack3ric, @jakobklemm, @mohsen-alizadeh, @redistay, @rohankmr414, @shuangcui, @Toromyx, @6543.
-- [Charabia](https://github.com/meilisearch/charabia): @mosuka, @6543
+- [Charabia](https://github.com/meilisearch/charabia): @Gusted, @mosuka, @6543
