--- a/meilisearch-release-changelog/v1.8.0.md
+++ b/meilisearch-release-changelog/v1.8.0.md
@@ -25,7 +25,7 @@ Done by @dureuill and @jakobklemm in #4456, #4537, #4509, #4548, #4549.
 
 To increase search response times and reduce bandwidth usage:
 
-* Meilisearch no longer returns the `vector` field will in the search response
+* Meilisearch no longer returns the `_vectors` field will in the search response
 * Meilisearch no longer returns the `_semanticScore` in the search response. Use `_rankingScore` in its place
 * Meilisearch no longer displays the query vector and its value when`"showRankingScoreDetails": true`
 
