--- a/meilisearch-release-changelog/v1.8.0.md
+++ b/meilisearch-release-changelog/v1.8.0.md
@@ -108,7 +108,7 @@ Done by @Kerollmops in #4535.
 
 ## Search robustness updates
 
-### Search cut-off
+### Search cutoff
 
 To avoid crashes and performance issues, Meilisearch now interrupts search requests that take more than 1500ms to complete.
 
