--- a/meilisearch-release-changelog/v1.8.0.md
+++ b/meilisearch-release-changelog/v1.8.0.md
@@ -15,7 +15,7 @@ Some SDKs might not include all new features. Consult the project repository for
 
 ## Hybrid search
 
-Full description of hybrid search changes [here](https://meilisearch.notion.site/v1-8-AI-search-API-usage-135552d6e85a4a52bc7109be82aeca42).
+This release introduces a few [changes to hybrid search](https://meilisearch.notion.site/v1-8-AI-search-API-usage-135552d6e85a4a52bc7109be82aeca42).): a new `distribution` embedder setting, support for two new embedder sources, and breaking changes to hybrid and semantic search ranking score.
 
 🗣️ This is an experimental feature and we need your help to improve it! Share your thoughts and feedback on this [GitHub discussion](https://github.com/orgs/meilisearch/discussions/677).
 
