--- a/meilisearch-release-changelog/v1.8.0.md
+++ b/meilisearch-release-changelog/v1.8.0.md
@@ -158,6 +158,7 @@ Done by @irevoire in #4536
 # Fixes 🐞
 
 * Fix crash when putting empty separator (#4574) @ManyTheFish
+* Stop crashing when panic occurs in thread pool (#4593) @Kerollmops 
 * Always show facet numbers in alpha order in the facet distribution (#4581) @Kerollmops
 * [Prometheus experimental feature](https://github.com/orgs/meilisearch/discussions/625): fix the HTTP request duration histogram bucket boundaries to follow the OpenTelemetry spec (#4530) @rohankmr414
 * [Hybrid search experimental feature](https://github.com/orgs/meilisearch/discussions/677): fix an [error on Windows](https://github.com/meilisearch/meilisearch/issues/4399) when generating embeddings (#4549) @dureuill
@@ -185,6 +186,7 @@ Done by @irevoire in #4536
   * Update cargo version (#4474) @curquiza
   * Remove useless analytics (#4578) @irevoire
   * Fix milli/Cargo.toml for usage as dependency via git (#4547) @Toromyx
+  * Remove useless analytics (#4578) @irevoire
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @availhang, @hack3ric, @jakobklemm, @mohsen-alizadeh, @redistay, @rohankmr414, @shuangcui, @Toromyx, @6543.
