--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -113,7 +113,7 @@ Done by @irevoire and @Kerollmops in #4646, #4656 and #4631
   * Add "precommands" to benchmark (#4624) @dureuill
   * Allow to comment with the results of benchmark invocation (#4651) @dureuill
 * Documentation
-  * TBD
+  * Update README.md (#4664) @tpayet
 * Misc
   * Fix some typos in comments (#4568) @yudrywet
   * Fix some typos in comments (#4582) @writegr
