--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -15,7 +15,7 @@ Some SDKs might not include all new features. Consult the project repository for
 
 ## Hybrid search improvements
 
-Since we focus on AI innovation, this version introduces multiple improvements and changes related to the hybrid search.
+Since we're focusing on AI innovation, this version introduces multiple improvements and changes related to hybrid search.
 More detailed changelog [here](https://meilisearch.notion.site/v1-9-AI-search-changes-e90d6803eca8417aa70a1ac5d0225697#38e6d3adf40e4ef1be14a3c4be39df94).
 
 Done by @dureuill and @irevoire in #4633 and #4649
