--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -82,7 +82,7 @@ curl \
 
 Previous existing values for `matchingStrategy` are `last` and `all` (`last` is the default value).
 
-Done by @ManyTheFish in TBD
+Done by @ManyTheFish in #4667
 
 ## Set `distinctAttribute` at search
 
