Apply suggestions from code review
Co-authored-by: Louis Dureuil <louis@meilisearch.com>

--- a/meilisearch-release-changelog/v1.9.0.md
+++ b/meilisearch-release-changelog/v1.9.0.md
@@ -31,7 +31,111 @@ Meilisearch v1.9.0 improves performance when indexing and using hybrid search, a
 
 ## Filter by score
 
-TBD
+To filter returned documents by their ranking score, a new `rankingScoreThreshold` parameter has been added to the search and similar routes.
+
+When a `rankingScoreThreshold` is provided, the results of the search/similar request are modified in the following way:
+
+1. No document whose `_rankingScore` is under the `rankingScoreThreshold` is returned
+2. Any document encountered during the search that is under the threshold is removed from the set of candidates and won’t count towards the `estimatedTotalHits`, `totalHits` and the facet distribution.
+
+### Examples
+
+request with**out** score threshold:
+
+```json
+POST /indexes/movies/search
+{
+  "q": "Badman dark returns 1",
+  "showRankingScore": true,
+  "limit": 5
+}
+```
+
+results:
+
+```json
+{
+	"hits": [
+	    {
+	      "title": "Batman the dark knight returns: Part 1",
+	      "id": "A",
+	      "_rankingScore": 0.93430081300813
+	    },
+	    {
+	      "title": "Batman the dark knight returns: Part 2",
+	      "id": "B",
+	      "_rankingScore": 0.6685627880184332
+	    },
+	    {
+	      "title": "Badman",
+	      "id": "E",
+	      "_rankingScore": 0.25
+	    },
+	    {
+	      "title": "Batman Returns",
+	      "id": "C",
+	      "_rankingScore": 0.11553030303030302
+	    },
+	    {
+	      "title": "Batman",
+	      "id": "D",
+	      "_rankingScore": 0.11553030303030302
+	    }
+	],
+	"query": "Badman dark returns 1",
+	"processingTimeMs": 11,
+	"limit": 5,
+	"offset": 0,
+	"estimatedTotalHits": 62
+}
+```
+
+request **with** score threshold:
+
+```json
+POST /indexes/movies/search
+{
+  "q": "Badman dark returns 1",
+  "showRankingScore": true,
+  "limit": 5
+  "rankingScoreThreshold": 0.2
+}
+```
+
+results:
+
+```json
+{
+	"hits": [
+	    {
+	      "title": "Batman the dark knight returns: Part 1",
+	      "id": "A",
+	      "_rankingScore": 0.93430081300813
+	    },
+	    {
+	      "title": "Batman the dark knight returns: Part 2",
+	      "id": "B",
+	      "_rankingScore": 0.6685627880184332
+	    },
+	    {
+	      "title": "Badman",
+	      "id": "E",
+	      "_rankingScore": 0.25
+	    }
+	],
+	"query": "Badman dark returns 1",
+	"processingTimeMs": 11,
+	"limit": 5,
+	"offset": 0,
+	"estimatedTotalHits": 3
+}
+```
+
+### Known limitations
+
+⚠️ For performance reasons, if Meilisearch finds `limit` hits above the `rankingScoreThreshold`, then the ranking score of the remaining documents is not evaluated, and so they are not removed from the set of candidates, even if their ranking score would be below the threshold.
+
+As a result, in this configuration the `estimatedTotalHits`, `totalHits` and the facet distribution may be overapproximation of their values.
 
 Done by @dureuill in TBD
 
@@ -108,7 +212,7 @@ Done by @irevoire and @Kerollmops in #4646, #4656 and #4631
 # Misc
 
 * Dependencies updates
-  * TBD
+  * Update actix-web 4.5.1 -> 4.6.0 done by @dureuill in https://github.com/meilisearch/meilisearch/pull/4675
 * CIs and tests
   * Add "precommands" to benchmark (#4624) @dureuill
   * Allow to comment with the results of benchmark invocation (#4651) @dureuill
